--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Document</title>
     <link rel="icon" type="image/svg+xml" href="#">
     <link rel="stylesheet" href="main.css">
-    <script src="script.js" defer></script>
+    <script type="module" src="script.js" defer></script>
 </head>
 
 
 <body>    
-    <h1>TEST FETCH - API</h1>
     <main id="container">
+        <h1>TEST FETCH - API</h1>
         <!-- Injected cards -->
     </main>
 
